tests/compile/aggregate_invariant.stderr
error: lifetime may not live long enough
  --> tests/compile/aggregate_invariant.rs:18:40
   |
14 |     let txn = client.transaction(&db);
   |         --- lifetime `'2` appears in the type of `txn`
15 |     let total = txn.query(|rows| {
   |                            ---- has type `&mut Query<'_, '1, v0::Schema>`
...
18 |         txn.query_one(aggregate(|rows| rows.sum(item.score())))
   |                                        ^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'1` must outlive `'2`
